# waterlogger-server-flask

./: .gitignore  manage.py  pyproject.toml
flask_server/: __init__.py  config.py  models.py  utilities.py
flask_server/auth/: __init__.py  routes.py
flask_server/drinks/: __init__.py  crud.py  routes.py  schemas.py
flask_server/notifications/: __init__.py  crud.py  routes.py  schemas.py
flask_server/users/: __init__.py  crud.py  routes.py  schemas.py
